--- a/src/components/HeroLastPage.astro
+++ b/src/components/HeroLastPage.astro
@@ -12,19 +12,19 @@
         
         <div class="horizontal-animation flex items-center justify-center w-full z-40" id="horizontalAnimation">
             <div class="horizontal-animation-item padding-top ">
-                <h3 class="font-akira text-[#FF8C00]">01</h3>
+                <h3 class="font-akira text-[#ff6d00]">01</h3>
                 <p>Submit your resume</p>
             </div>
             <div class="horizontal-animation-item padding-bottom">
-                <h3 class="font-akira text-[#FF8C00]">02 </h3>
+                <h3 class="font-akira text-[#ff6d00]">02 </h3>
                 <p>Comprehensive Review</p>
             </div>
             <div class="horizontal-animation-item padding-top">
-                <h3 class="font-akira text-[#FF8C00]">03 </h3>
+                <h3 class="font-akira text-[#ff6d00]">03 </h3>
                 <p>Detailed Feedback</p>
             </div>
             <div class="horizontal-animation-item padding-bottom">
-                <h3 class="font-akira text-[#FF8C00]">04 </h3>
+                <h3 class="font-akira text-[#ff6d00]">04 </h3>
                 <p>No Obligation</p>
             </div>
         </div>
