--- a/src/components/HeroSeventhPage.astro
+++ b/src/components/HeroSeventhPage.astro
@@ -8,7 +8,7 @@ import astrix from "../../public/assets/whiteAsterisk.png"
         <div class="w-full h-full flex items-center justify-center">
             <div class="w-[100%] md:w-[50%] h-full bg-[#1E1E1D] md:p-14 p-4 flex flex-col">
                 <div class="flex flex-col">
-                    <p class=" text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2 text-[#FF8C00]">
+                    <p class=" text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2 text-[#ff6d00]">
                         First Impressions matter
                     </p>
                     <p class=" text-[1.1rem] font-semibold leading-[100%] w-[70%] text-white/70">
@@ -39,7 +39,7 @@ import astrix from "../../public/assets/whiteAsterisk.png"
         <div class="w-full h-full flex items-center justify-center">
             <div class="w-[100%] md:w-[50%] h-full bg-[#1E1E1D] md:p-14 p-4 flex flex-col">
                 <div class="flex flex-col">
-                    <p class="text-[#FF8C00] text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2">
+                    <p class="text-[#ff6d00] text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2">
                         Brand differentiation
                     </p>
                     <p class="text-white/70 text-[1.1rem] font-semibold leading-[100%] w-[70%] ">
@@ -70,7 +70,7 @@ import astrix from "../../public/assets/whiteAsterisk.png"
         <div class="w-full h-full flex items-center justify-center">
         <div class="w-[100%] md:w-[50%] h-full bg-[#1E1E1D] md:p-14 p-4 flex flex-col">
             <div class="flex flex-col">
-                <p class="text-[#FF8C00] text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2">
+                <p class="text-[#ff6d00] text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2">
                     Imporved Usability
                 </p>
                 <p class=" text-[1.1rem] font-semibold leading-[100%] w-[70%] text-white/70">
