--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,26 +7,28 @@
         </div>
         <div class="hidden md:flex items-center justify-between"> <!-- Show on medium screens and up -->
             <ul class="flex space-x-4 px-6 py-4 bg-[#373737] rounded-full ">
-                <li class="nav-links"><a href="/products" class="text-white hover:text-[#ff5800] transition-all duration-300">Products</a></li>
-                <li class="nav-links"><a href="/company" class="text-white hover:text-[#ff5800] transition-all duration-300">Company </a></li>
-                <li class="nav-links"><a href="/services" class="text-white hover:text-[#ff5800] transition-all duration-300">Services</a></li>
-                <li class="nav-links"><a href="/resources" class="text-white hover:text-[#ff5800] transition-all duration-300">Resources</a></li>
+                <li class="nav-links"><a href="/products" class="text-white hover:text-[#ff6d00] transition-all duration-300">Products</a></li>
+                <li class="nav-links"><a href="/company" class="text-white hover:text-[#ff6d00] transition-all duration-300">Company </a></li>
+                <li class="nav-links"><a href="/services" class="text-white hover:text-[#ff6d00] transition-all duration-300">Services</a></li>
+                <li class="nav-links"><a href="/resources" class="text-white hover:text-[#ff6d00] transition-all duration-300">Resources</a></li>
             </ul>
             <a href="/company#contact">
-                <button class="text-white text-[0.9rem] px-6 py-4 rounded-full bg-[#ff5800] font-semibold ml-4">Get in touch</button> <!-- Get in touch button -->
+                <button class="text-white text-[0.9rem] px-6 py-4 rounded-full bg-[#ff6d00] font-semibold ml-4">Get in touch</button> <!-- Get in touch button -->
             </a>
         </div>
-        <button class="text-black text-[0.9rem] px-6 py-4 rounded-full bg-[#ff5800] font-semibold md:hidden" id="hamburger">☰</button> <!-- Hamburger button -->
+        <button class="text-black text-[0.9rem] px-6 py-4 rounded-full bg-[#ff6d00] font-semibold md:hidden" id="hamburger">☰</button> <!-- Hamburger button -->
     </div>
     <div id="mobile-menu" class="absolute -right-[1.2rem] bg-[#e7e7d6] w-screen p-0 m-0 h-screen hidden rounded-t-2xl"> <!-- Mobile menu -->
         <ul class="flex flex-col space-y-4 p-4 h-full">
-            <li class="nav-links "><a href="/products" class="flex flex-col items-start"><span class="text-[#ff5800] text-[0.7rem] ">01</span><p>Products</p></a></li>
-            <li class="nav-links "><a href="/company" class="flex flex-col items-start"><span class="text-[#ff5800] text-[0.7rem]  ">02</span><p>Company</p></a></li>
-            <li class="nav-links "><a href="/services" class="flex flex-col items-start"><span class="text-[#ff5800] text-[0.7rem]  ">03</span><p>Services</p></a></li>
-            <li class="nav-links "><a href="/resources" class="flex flex-col items-start"><span class="text-[#ff5800] text-[0.7rem]  ">04</span><p>Resources</p></a></li>
+            <li class="nav-links "><a href="/products" class="flex flex-col items-start"><span class="text-[#ff6d00] text-[0.7rem] ">01</span><p>Products</p></a></li>
+            <li class="nav-links "><a href="/company" class="flex flex-col items-start"><span class="text-[#ff6d00] text-[0.7rem]  ">02</span><p>Company</p></a></li>
+            <li class="nav-links "><a href="/services" class="flex flex-col items-start"><span class="text-[#ff6d00] text-[0.7rem]  ">03</span><p>Services</p></a></li>
+            <li class="nav-links "><a href="/resources" class="flex flex-col items-start"><span class="text-[#ff6d00] text-[0.7rem]  ">04</span><p>Resources</p></a></li>
         </ul>
     </div>
 </nav>
+
+<!--  #ff5800  -->
 
 <style>
 
