--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -137,7 +137,7 @@ const serializedProFeatures = JSON.stringify(proFeatures);
         </div>
 
         <!-- Existing cards with adjusted width -->
-        <div class="w-[90%] md:w-[25%] h-full bg-[#FF8C00] rounded-[3rem] p-6 md:p-10">
+        <div class="w-[90%] md:w-[25%] h-full bg-[#ff6d00] rounded-[3rem] p-6 md:p-10">
             <p class="font-new stretch text-[2rem] font-semibold">CXP1</p>
             <div class="flex flex-col items-center justify-between gap-12 py-8">
                 <div class="flex flex-col items-center justify-center ">
