--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -48,7 +48,7 @@ const sections = [
                     <p class="text-[25px] lg:text-[80px] akira animated-text">your business forward.</p>
                 </div>
             </div>
-            <div class="w-full flex flex px-2 lg:px-18 pt-14 lg:pt-2">
+            <div class="w-full flex px-2 lg:px-18 pt-14 lg:pt-2">
                 <div class="w-full h-full lg:p-12">
                     <p class="text-[20px] font-bold">
                         Who we are
@@ -272,7 +272,7 @@ const sections = [
                 <div class="bottomtext">
                     <p>We Are Hiring !</p>
                     <span class="mt-24 text-center text-md">We are always on the lookout for passionate, talented individuals to join our dynamic team! If you're eager to make an impact, innovate, and grow in a collaborative environment, we want to hear from you. Explore our current job openings and take the first step toward an exciting career with us. Your next opportunity could be just a click away!</span>
-                    <div class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#FF8C00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Contact to Apply</div>
+                    <div class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#ff6d00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Contact to Apply</div>
                 </div> 
             </div>
             <div id="custom-cursor-product"></div>
@@ -487,7 +487,7 @@ const sections = [
   }
 
   .submit-button {
-    background-color: #FF8C00;
+    background-color: #ff6d00;
     color: black;
     font-weight: 700;
     border: none;
