--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -44,7 +44,7 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
             </div>
         </div>
         <div class="w-full lg:w-[30%] flex flex-col items-start justify-end"> 
-            <div class="w-32 lg:w-48 h-2 lg:h-4 bg-[#FF5800] mt-6 lg:mt-14 mb-6 dash"></div>
+            <div class="w-32 lg:w-48 h-2 lg:h-4 bg-[#ff6d00] mt-6 lg:mt-14 mb-6 dash"></div>
             <div class="w-full h-full font-semibold leading-none subtext">
               The supply chains we need, the special effects that wow, the stadiums we fill, the food we eat, the
               clothes we wear, the cars we drive, the homes where we live, the holidays we take, the trees we
@@ -69,7 +69,7 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
             <div class="bottomtext flex flex-col items-center justify-center">
                 <img src={astrix} alt="astrix" class="astrix w-[50px] mb-8 "/>
                 <p>Ready to stand out and grow ?</p>
-                <a href="/company#contact" class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#FF8C00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Start Your Success</a>
+                <a href="/company#contact" class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#ff6d00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Start Your Success</a>
         </div>
         <div id="custom-cursor-product"></div>
     </div>
