--- a/src/components/Horizontal .astro
+++ b/src/components/Horizontal .astro
@@ -102,7 +102,7 @@ const services = [
         start: 'top 0%',
         end: "top -200%",
         pin: true,
-        scrub: true,
+        scrub: 1,
 
     }
 });
