--- a/src/components/StackingCardsHero.astro
+++ b/src/components/StackingCardsHero.astro
@@ -103,6 +103,8 @@ import * as Icon from '@astropub/icons'
         transform: translate(-50%, -50%);
         width: 1000px;
         height: 700px;
+        border-radius: 40px;
+        overflow: hidden;
     }
 
     @media screen and (max-width: 768px) {
