First page content changes

--- a/src/components/CTAPage.astro
+++ b/src/components/CTAPage.astro
@@ -6,19 +6,15 @@
 
 <div id="main">
     <div class="page6">
-        <div class="moreCases">
-            <p>MORE</p>
-            <p>CASES</p>
-        </div>
         <div class="bottomtext">
-            <p>Ready </p>
-            <p>For your Success</p>
-            <p>Journey ?</p>
-            <a href="/company#contact" class="mt-24 contact-button text-sm text-center py-4 px-5 bg-[#ff6d00] rounded-full w-fit hover:bg-black hover:text-white transition-all duration-300 ">Contact us</a>
+            <p>Ready to see what your</p> 
+            <p> future looks like with our CXPoint</p>
+            <p>products for your Contact Center?</p>
+            <a href="/company#contact" class="mt-24 contact-button text-sm text-center py-4 px-5 bg-[#ff6d00] rounded-full w-fit hover:bg-black hover:text-white transition-all duration-300 ">Request Demo</a>
         </div>
         <div class="footertext">
-            <p>this is your team of brand experts,</p>
-            <p>get ready to make your brand stand out.</p>
+            <p>this is your team of Contact Center experts,</p>
+            <p>get ready to make your contact center stand out.</p>
         </div>
     </div>
     <div id="custom-cursor-product">
@@ -86,7 +82,7 @@
     align-items: center;
     font-family: 'new', sans-serif;
     font-weight: 700;
-    font-size: 100px;
+    font-size: 50px;
     font-stretch: 700%;
 }
 
@@ -97,7 +93,7 @@
 }
 
 .bottomtext p {
-    line-height: 0.8;
+    line-height: 0.9;
     text-align: center;
     transition: all 0.5s ease;
 }
