--- a/src/components/HeroSeventhPage.astro
+++ b/src/components/HeroSeventhPage.astro
@@ -9,7 +9,7 @@ import astrix from "../../public/assets/whiteAsterisk.png"
             <div class="w-[100%] md:w-[50%] h-full bg-[#1E1E1D] md:p-14 p-4 flex flex-col">
                 <div class="flex flex-col">
                     <p class=" text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2 text-[#ff6d00]">
-                        First Impressions matter
+                        Platform discovery matters
                     </p>
                     <p class=" text-[1.1rem] font-semibold leading-[100%] w-[70%] text-white/70">
                         Your website, product, or branding is the first interaction potential customers have with your business.A professional design creates a strong, positive first impression, leading to increased trust and credibility.
@@ -17,10 +17,10 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                 </div>
                 <div class="flex flex-col">
                     <p class="font-new statistics mt-8 ">
-                        94%
+                        75 % 
                     </p>
                     <p class="text-[#E7E7D6] text-[2rem] font-bold leading-[100%]">
-                        of first impressions are design-related
+                        of discovery effort are highly depended on technical system and insights
                     </p>
                 </div>
                 <p class="w-[80%] text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
@@ -40,7 +40,7 @@ import astrix from "../../public/assets/whiteAsterisk.png"
             <div class="w-[100%] md:w-[50%] h-full bg-[#1E1E1D] md:p-14 p-4 flex flex-col">
                 <div class="flex flex-col">
                     <p class="text-[#ff6d00] text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2">
-                        Brand differentiation
+                        Effort-free excellence for Contact centers via AI based automation
                     </p>
                     <p class="text-white/70 text-[1.1rem] font-semibold leading-[100%] w-[70%] ">
                         Effective branding distinguishes your business from competitors, creating a unique identity that resonates with your target audience.This fosters customer loyalty and trust, setting your brand apart in the market.
@@ -51,11 +51,11 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                         3-5 x
                     </p>
                     <p class="text-[#E7E7D6] text-[2rem] font-bold leading-[100%]">
-                        higher conversion rates from awareness
+                        Higher effort Savings on Contact center operations 
                     </p>
                 </div>
                 <p class="w-[80%] text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
-                    Effective differentiation strategies give customers compelling reasons to choose a particular brand over competitors.
+                    Save time, save effort—our product streamlines your workflow, making every task easier and more efficient.
                 </p>
             </div>
             <div class="w-[50%] h-full bg-[#1E1E1D] p-14 hidden md:flex items-start justify-center pt-24">
@@ -71,15 +71,15 @@ import astrix from "../../public/assets/whiteAsterisk.png"
         <div class="w-[100%] md:w-[50%] h-full bg-[#1E1E1D] md:p-14 p-4 flex flex-col">
             <div class="flex flex-col">
                 <p class="text-[#ff6d00] text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2">
-                    Imporved Usability
+                    Improved Xperience and productivity across Contact Center Ecosystem
                 </p>
-                <p class=" text-[1.1rem] font-semibold leading-[100%] w-[70%] text-white/70">
-                    Good user experience is crucial for customer retention and satisfaction. A well-designed website or product ensures ease of use, accessibility, and satisfaction, leading to increased loyalty and repeat business.
+                <p class=" text-[1.1rem] font-semibold leading-[100%] w-[100%] text-white/70">
+                    Good experience across Contact center Ecosystem is essential element for Agents, supervisors, business users, developers all across as well as for customer. A well-designed AI based application will ensures ease of use, accessibility, improved outcomes, reduced operations time, boost user productivity on Contact center platform and faster market value realization
                 </p>
             </div>
             <div class="flex flex-col">
-                <p class="font-new statistics mt-8">
-                    71 %
+                <p class="font-new statistics ">
+                    10 x
                 </p>
                 <p class="text-[#E7E7D6] text-[2rem] font-bold leading-[100%]">
                     of customers prefer businessess with seamless intiuitive UX
