--- a/src/components/StackingCardsHero.astro
+++ b/src/components/StackingCardsHero.astro
@@ -101,7 +101,7 @@ import * as Icon from '@astropub/icons'
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 1000px;
+        width: 100%;
         height: 700px;
         border-radius: 40px;
         overflow: hidden;
