--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -4,6 +4,7 @@ import astrix from "../../../public/assets/asterisk.png";
 import Marquee from "../../components/marquee.astro";
 import Footer from "../../components/Footer.astro";
 import Navbar2 from "../../components/Navbar2.astro";
+import ContactFormReact from "../../components/ContactFormReact.tsx";
 
 const sections = [
     {
@@ -280,58 +281,7 @@ const sections = [
         </div>
 
         <!-- Contact Form -->
-        <section class="contact-section" id="contact">
-            <div class="container">
-              <h2 class="akira">Ready to stand out and grow?</h2>
-              <p class="text-gray-500 akira font-semibold">
-                Share your goals and ideas with us, and we'll get back to you within 24-48 hours. We're excited to dive into your project and discuss how we can help bring your vision to life. Let's get started on your path to success!
-              </p>
-              
-              <form>
-                <div class="form-group">
-                  <label for="name">Your name</label>
-                  <input type="text" id="name" placeholder="Enter your full name" required>
-                </div>
-                
-                <div class="form-group">
-                  <label for="email">Email Address</label>
-                  <input type="email" id="email" placeholder="Enter your email address" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="phone">Phone Number</label>
-                    <input type="tel" id="phone" placeholder="Enter your phone number" required>
-                </div>
-                
-                <div class="form-group">
-                  <label>What are you interested in?</label>
-                  <div class="button-group">
-                    <button type="button">AX</button>
-                    <button type="button">BX</button>
-                    <button type="button">CX</button>
-                    <button type="button">DX</button>
-                  </div>
-                </div>
-                
-                <div class="form-group">
-                  <label>Select your License type</label>
-                  <div class="button-group">
-                    <button type="button">Free Trial</button>
-                    <button type="button">CX1</button>
-                    <button type="button">CX2</button>
-                    <!-- <button type="button">CX3</button> -->
-                  </div>
-                </div>
-                
-                <div class="form-group">
-                  <label for="details">Project Details</label>
-                  <textarea id="details" placeholder="Briefly describe your project or needs" required></textarea>
-                </div>
-                
-                <button type="submit" class="submit-button">Submit Request</button>
-              </form>
-            </div>
-        </section>
+        <ContactFormReact />
     </div>
     <Footer/>
 </Layout>
